--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
+	<!-- fucking kill me god. giving his strongest battles to his weakest soldiers fr (2 seconds of googling a certain tag) -->
   <body>
     <main>
-        <h1>NERDS!!!</h1>  
+        <h1>matti &#9734; 14</h1>  
     </main>
 	<script src="index.js"></script>
   </body>
