--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <body>
     <main>
         <h1>matti &#9734; 14</h1>  
+	    <p>None of the art is mine unless I say so. Links are the sources I found art from.</p>
     </main>
 	<script src="index.js"></script>
   </body>
