--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>brewing coffee...</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./coffee.jpeg" type="image/x-icon">
   </head>
 	<!-- fucking kill me god. giving his strongest battles to his weakest soldiers fr (2 seconds of googling a certain tag) -->
   <body>
