--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <main>
         <h1>matti &#9734; 14</h1>  
-	    <p>None of the art is mine unless I say so. Links are the sources I found art from.</p>
+	    <p>none of the art is mine unless i say so. links are the sources i found art from.</p>
     </main>
 	<script src="index.js"></script>
   </body>
