--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
   <body>
     <main>
         <h1>matti &#9734; 14</h1>  
-	    <p>none of the art is mine unless i say so. links are the sources i found art from.</p>
+	<nav>
+		<ul>
+			<li><a href="#">about me</a></li>
+			<li><a href="#">stuff i do</a></li>
+			<li><a href="#">funky stuff that has no actual value other than me messing around</a></li>
+		</ul>
+	</nav>
     </main>
 	<script src="index.js"></script>
   </body>
